# Path-Tracer-OpenGL

./: .gitignore  CMakeLists.txt  README.md
include/: aabb.h  bvh.h  camera.h  material.h  model.h  prims.h  quad.h  sphere.h  texture.h  triangle.h
include/glad/: glad.h
src/: glad.c  main.cpp  quad.fs  quad.vs  raytracer.comp
